# bus_timeliness

./: .gitignore  CLAUDE.md  Makefile  README.md  config.py  extract_stops.py  extract_stops_simple.py  get_bus_data.py  pyproject.toml
.github/workflows/: bus_tracking.yml  quality.yml  test.yml
tests/: conftest.py  test_arrival_detection.py  test_data_filtering.py  test_distance_calculations.py  test_journey_separation.py  test_main_functions.py  test_xml_parsing.py
